--- a/index.ipynb
+++ b/index.ipynb
@@ -417,27 +417,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Friends',\n",
-       " 'genre': 'sitcom',\n",
-       " 'no_of_seasons': 10,\n",
-       " 'no_of_episodes': 236,\n",
-       " 'creators': ['David Crane', 'Marta Kauffman']}"
+       "'David Crane'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "david = friends['creators'][0]\n",
-    "david\n"
+    "david"
    ]
   },
   {
