Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -426,14 +426,14 @@
        "'David Crane'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "david = friends['creators'][0]\n",
-    "friends['creators']"
+    "friends['creators'][0]"
    ]
   },
   {
